# UAIP

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  ENGINEERING_SUMMARY.md  IMPROVEMENTS.md  LICENSE  MASTER_PLAN.md  Makefile  PHASE2_IMPROVEMENTS.md  PHASE3_IMPROVEMENTS.md  PHASE4_IMPROVEMENTS.md  README.md  TECHNICAL_ANALYSIS.md  WINDOWS.md  check_output.txt  check_output_2.txt  deny.toml  dev.ps1  docker-compose.dev.yml  docker-compose.yml  project.md  quick-start.bat  quick-start.ps1  reset-db.ps1
.github/workflows/: ci.yml
benches/: routing_benchmark.rs
config/: default.toml  prometheus.yml
crates/uaip-adapters/: Cargo.toml
crates/uaip-adapters/src/: http.rs  lib.rs  modbus.rs  mqtt.rs  opcua.rs  webrtc.rs  websocket.rs
crates/uaip-auth/: Cargo.toml
crates/uaip-auth/src/: certificate.rs  jwt.rs  lib.rs  rbac.rs
crates/uaip-core/: Cargo.toml
crates/uaip-core/src/: ai_agent.rs  device.rs  error.rs  lib.rs  message.rs  network.rs  protocol.rs
crates/uaip-hub/: Cargo.toml
crates/uaip-hub/examples/: fix_migration.rs
crates/uaip-hub/src/: ai_session_manager.rs  api.rs  config.rs  handlers.rs  health.rs  lib.rs  main.rs  metrics.rs  shutdown.rs  telemetry.rs
crates/uaip-hub/src/api/: rest.rs  websocket.rs
crates/uaip-hub/src/handlers/: adapters.rs  ai.rs  auth.rs  auth_register_snippet.rs  commands.rs  devices.rs  media.rs  metrics.rs  users.rs
crates/uaip-hub/src/middleware/: logging.rs  mod.rs  rate_limit.rs
crates/uaip-hub/src/tracing/: jaeger.rs  mod.rs
crates/uaip-orchestrator/: Cargo.toml
crates/uaip-orchestrator/src/: lib.rs  media.rs  rule_engine.rs  scenario.rs  streaming.rs  workflow.rs
crates/uaip-registry/: Cargo.toml
crates/uaip-registry/src/: cache.rs  capability.rs  discovery.rs  heartbeat.rs  lib.rs  models.rs  registration.rs  repository.rs
crates/uaip-router/: Cargo.toml
crates/uaip-router/src/: lib.rs  nats.rs  priority_queue.rs  qos.rs  router.rs
crates/uaip-security/: Cargo.toml
crates/uaip-security/src/: encryption.rs  lib.rs  tls.rs  validation.rs
docs/: ADAPTER_APIs.md  DATABASE_OPTIMIZATION.md
docs/api/: README.md  openapi.yaml
grafana/: README.md
grafana/dashboards/: infrastructure-monitoring.json  uaip-overview.json
grafana/provisioning/dashboards/: dashboard.yml
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secret-template.yaml  service.yaml  serviceaccount.yaml
migrations/: 001_initial_schema.sql  002_rbac_tables.sql  003_performance_indexes.sql  004_media_and_streaming.sql  005_seed_admin_user.sql  006_add_agent_type.sql  007_password_security.sql  008_add_agent_fields.sql  009_split_users_agents.sql  README.md
scripts/: README.md  analyze-database.sh  analyze-logs.sh  backup-database.sh  deploy.sh  generate-docs.sh  health-monitor.sh  load-test.sh  restore-database.sh
tests/integration/: Cargo.toml  README.md  api_integration.rs
tests/integration/helpers/: assertions.rs  client.rs  database.rs  fixtures.rs  mod.rs
tools/device-simulator/: Cargo.toml  README.md
tools/device-simulator/src/: device.rs  main.rs  scenarios.rs
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/auth/change-password/: page.tsx
web/src/app/auth/login/: page.tsx
web/src/app/auth/register/: page.tsx
web/src/app/devices/: columns.tsx  page.tsx
web/src/app/intelligence/: page.tsx
web/src/app/intelligence/[id]/: page.tsx
web/src/app/security/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/telemetry/: page.tsx
web/src/components/: app-sidebar.tsx
web/src/components/settings/: add-user-dialog.tsx  edit-user-dialog.tsx  users-tab.tsx
web/src/components/ui/: data-table.tsx
web/src/lib/: api.ts  store.ts
web/src/types/: api.ts
