[package]
name = "uaip-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
uaip-core = { path = "../uaip-core" }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
x509-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
