[package]
name = "uaip-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
uaip-core = { path = "../uaip-core" }
sqlx = { workspace = true }
redis = { workspace = true }
mdns-sd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
