# Integration Test Harness for UAIP Hub
# Provides common utilities and test fixtures

[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "integration_tests"
path = "helpers/mod.rs"

[[test]]
name = "api_integration"
path = "api_integration.rs"

[[test]]
name = "device_integration"
path = "device_integration.rs"

[[test]]
name = "messaging_integration"
path = "messaging_integration.rs"

[[test]]
name = "auth_integration"
path = "auth_integration.rs"

[dependencies]
# UAIP crates
uaip-core = { path = "../../crates/uaip-core" }
uaip-hub = { path = "../../crates/uaip-hub" }

# Testing framework
tokio = { version = "1.35", features = ["full", "test-util"] }
tokio-test = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
hyper = "1.1"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing utilities
testcontainers = "0.15"
wiremock = "0.5"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"

# Assertions
assert_matches = "1.5"
pretty_assertions = "1.4"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
once_cell = "1.19"
