[package]
name = "device-simulator"
version = "0.1.0"
edition = "2021"
description = "Mock IoT device simulator for UAIP testing"
authors = ["Hakille"]
license = "Apache-2.0"

[[bin]]
name = "device-simulator"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
dotenvy = { workspace = true }
